fix: header does not completely wrap fixed element

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,7 +5,7 @@ header {
   z-index: 100;
   height: 3.8rem;
   width: 100%;
-  padding-bottom: 11.8rem;
+  padding-bottom: 11rem;
   color: white;
   background-color: #456;
 	line-height: 3.8rem;
