--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -2,7 +2,7 @@
   /* adjust header */
 
   header {
-    padding-bottom: 9.8rem;
+    padding-bottom: 9rem;
   }
   
   .subscribe {
